--- a/client/src/components/Blob.css
+++ b/client/src/components/Blob.css
@@ -18,15 +18,13 @@
     border-radius: 50%;
     translate: -50% -50%;
     animation: gradientAnimation 15s linear infinite, rotate 9s infinite;
-    /* animation: rotate 9s infinite; */
     transition: color 1s;
-    overflow: hidden;
 }
 .blur-overlay {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 100vw;
     height: 100%;
     backdrop-filter: blur(200px); 
     z-index: 1;
